Changed CMakeLists.txt file

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -9,5 +9,11 @@ include_directories(include)
 file(GLOB SOURCES "src/*.cpp")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
-add_executable(robocar ${SOURCES} include/client.h src/client.cpp)
+#add_executable(robocar ${SOURCES})
 #target_link_libraries( robocar ${OpenCV_LIBS})
+
+#add_executable(server "src/main_server.cpp" "src/comm/server.cpp" "include/comm/server.h")
+#add_executable(client "src/main_client.cpp" "src/comm/client.cpp" "include/comm/client.h")
+
+add_executable(main_server src/main_server.cpp "src/comm/server.cpp" "include/comm/server.h")
+add_executable(main_client src/main_client.cpp "src/comm/client.cpp" "include/comm/client.h")
