Deleted unnecessary statements

--- a/software/robocar/CMakeLists.txt
+++ b/software/robocar/CMakeLists.txt
@@ -16,10 +16,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 #add_executable(robocar ${SOURCES})
 #target_link_libraries( robocar ${OpenCV_LIBS})
 
-add_executable(main_ServerSocket src/main_serversocket.cpp "src/comm/ServerSocket.cpp" "include/comm/ServerSocket.h" "src/comm/Socket.cpp" "include/comm/Socket.h" "src/sensors/PCA9685.cpp" "include/sensors/PCA9685.h" "src/comm/I2C.cpp" "include/comm/I2C.h")
-#add_executable(main_ClientSocket src/main_clientsocket.cpp "src/comm/ClientSocket.cpp" "include/comm/ClientSocket.h" "src/comm/Socket.cpp" "include/comm/Socket.h")
+#add_executable(main_ServerSocket src/main_serversocket.cpp "src/comm/ServerSocket.cpp" "include/comm/ServerSocket.h" "src/comm/Socket.cpp" "include/comm/Socket.h" "src/sensors/PCA9685.cpp" "include/sensors/PCA9685.h" "src/comm/I2C.cpp" "include/comm/I2C.h")
+add_executable(main_ClientSocket src/main_clientsocket.cpp "src/comm/ClientSocket.cpp" "include/comm/ClientSocket.h" "src/comm/Socket.cpp" "include/comm/Socket.h")
 #add_executable(main_i2c src/main_i2c.cpp "src/sensors/PCA9685.cpp" "include/sensors/PCA9685.h" "src/comm/I2C.cpp" "include/comm/I2C.h")
-target_link_libraries(main_ServerSocket ${CMAKE_THREAD_LIBS_INIT})
+#target_link_libraries(main_ServerSocket ${CMAKE_THREAD_LIBS_INIT})
 
 
 #add_executable(main_server src/main_server.cpp "src/comm/server.cpp" "include/comm/server.h")
