--- a/software/robocar/CMakeLists.txt
+++ b/software/robocar/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(Threads REQUIRED)
 #include_directories( ${OpenCV_INCLUDE_DIRS})
 include_directories(include)
 
-file(GLOB SOURCES "src/robocar_main.cpp" "src/comm/*.cpp" "src/sensors/*cpp")
+file(GLOB SOURCES "robocar_main.cpp" "src/comm/*.cpp" "src/sensors/*cpp")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
 
