--- a/software/robocar/CMakeLists.txt
+++ b/software/robocar/CMakeLists.txt
@@ -4,11 +4,12 @@ project(robocar)
 set(CMAKE_CXX_STANDARD 11)
 
 find_package(Threads REQUIRED)
-find_package(WiringPi REQUIRED)
+find_library(wiringPi_LIB wiringPi)
+#find_package(WiringPi REQUIRED)
 #find_package(OpenCV REQUIRED)
 
 #include_directories( ${OpenCV_INCLUDE_DIRS})
-include_directories(${WIRINGPI_INCLUDE_DIRS})
+#include_directories(${WIRINGPI_INCLUDE_DIRS})
 include_directories(include)
 
 file(GLOB SOURCES "robocar_main.cpp" "src/comm/*.cpp" "src/sensors/*cpp")
@@ -17,6 +18,6 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
 add_executable(robocar ${SOURCES})
 target_link_libraries(robocar ${CMAKE_THREAD_LIBS_INIT})
-target_link_libraries(robocar ${WIRINGPI_LIBRARIES})
+target_link_libraries(robocar ${wiringPi_LIB})
 #target_link_libraries( robocar ${OpenCV_LIBS})
 
