Changed project structure

--- a/software/remote_controlled/client/CMakeLists.txt
+++ b/software/remote_controlled/client/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
 
-project(client)
+project(roboclient)
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -8,11 +8,11 @@ find_package(Threads REQUIRED)
 
 include_directories(include)
 
-file(GLOB SOURCES "main.cpp" "src/*.cpp")
+file(GLOB SOURCES "roboclient_main.cpp" "src/*.cpp")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
 
-add_executable(client ${SOURCES})
+add_executable(roboclient ${SOURCES})
 
-target_link_libraries(client ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(roboclient ${CMAKE_THREAD_LIBS_INIT})
